aws_cluster/k8s/templates/security/validating-admission-policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: require-resource-requests
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods"]
  validations:
    - expression: >
        object.spec.containers.all(c,
          c.resources.requests.exists(r, r == "cpu") &&
          c.resources.requests.exists(r, r == "memory")
        )
      message: "Every container must define CPU and memory requests."
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: require-resource-requests-saleor1
  namespace: saleor1
spec:
  policyName:  require-resource-requests
  validationActions:
    -  Deny
  matchResources:
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: saleor1
